--- a/course_pages/chem_course.html
+++ b/course_pages/chem_course.html
@@ -180,7 +180,7 @@
             
             .quarter2 {
                 margin-top: 10%;
-                margin-bottom: 1.5%;
+                margin-bottom: 30px;
                 margin-left: 0%;
                 margin-right: 1%;
                 width: 100%;
